test/grammar/schema/inherit/cycle_inherit_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:4:8
  |
4 | schema Son(Parent):
  |        ^ There is a circular reference between schema Son and Parent
  |